Checkpoint - cleanup + fixes
Cleaned up code mostly.
Removed handler since it was too fast.
Add R.strings for everything
Bus rotate towards direction
RecyclerView scroll animation lib
Commented unnecessary logging

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,10 @@
     <string name="empty_no_nearby_message">There are no nearby stops. Please view the navigation drawer for specific routes.</string>
     <string name="empty_no_location_message">Location is not available. Please allow location for nearby arrivals.</string>
 
+    <string name="snackbar_dismiss">Dismiss</string>
+    <string name="map_arrival_time_message">coming in</string>
+    <string name="map_direction">Direction</string>
+    <string name="map_percentage">Percentage full</string>
+    <string name="map_bus_name">Bus</string>
 
 </resources>
